--- a/portfolio.html
+++ b/portfolio.html
@@ -11,171 +11,183 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a href="./portfolio.html" class="header-logo link"
-          >Web<span class="logo-word">Studio</span></a
-        >
-        <ul class="header-list list">
-          <li>
-            <a href="./index.html" class="link header-list-item">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="link header-list-item"
-              >Portfolio</a
-            >
-          </li>
-          <li><a href="" class="link header-list-item">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="header-address">
-        <ul class="header-address-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link header-address-item"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link header-address-item"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="second-container">
+        <nav class="header-navigation">
+          <a href="./portfolio.html" class="header-logo link"
+            >Web<span class="logo-word">Studio</span></a
+          >
+          <ul class="header-list list">
+            <li>
+              <a href="./index.html" class="link header-list-item">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="link header-list-item"
+                >Portfolio</a
+              >
+            </li>
+            <li><a href="" class="link header-list-item">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="header-address">
+          <ul class="header-address-list list">
+            <li>
+              <a
+                href="mailto:info@devstudio.com"
+                class="link header-address-item"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link header-address-item"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="project">
-        <h1 hidden>Navigation and menu</h1>
-        <ul class="project-list list">
-          <li><button type="button" class="list-btn">All</button></li>
-          <li><button type="button" class="list-btn">Web Site</button></li>
-          <li><button type="button" class="list-btn">App</button></li>
-          <li><button type="button" class="list-btn">Design</button></li>
-          <li><button type="button" class="list-btn">Marketing</button></li>
-        </ul>
-        <ul class="project-second-list list">
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/images-1.jpg"
-                alt="Interfaces"
-                width="360"
-                height="300"
-              />
-              <h2 class="second-list-title">Banking App Interface Concept</h2>
-              <p class="second-list-text">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/images-2.jpg"
-                alt="mobile pay"
-                width="360"
-                height="300"
-              />
-              <h2 class="second-list-title">Cashless Payment</h2>
-              <p class="second-list-text">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/images-3.jpg"
-                alt="gadjets"
-                width="360"
-                height="300"
-              />
-              <h2 class="second-list-title">Meditation App</h2>
-              <p class="second-list-text">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/images-4.jpg"
-                alt="car"
-                width="360"
-                height="300"
-              />
-              <h2 class="second-list-title">Taxi Service</h2>
-              <p class="second-list-text">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/images-5.jpg"
-                alt="phone screen"
-                width="360"
-                height="300"
-              />
-              <h2 class="second-list-title">Screen Illustrations</h2>
-              <p class="second-list-text">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/images-6.jpg"
-                alt="girl with phone"
-                width="360"
-                height="300"
-              />
-              <h2 class="second-list-title">Online Courses</h2>
-              <p class="second-list-text">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/images-7.jpg"
-                alt="instastories"
-                width="360"
-                height="300"
-              />
-              <h2 class="second-list-title">Instagram Stories Concept</h2>
-              <p class="second-list-text">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/images-8.jpg"
-                alt="food in the package"
-                width="360"
-                height="300"
-              />
-              <h2 class="second-list-title">Organic Food</h2>
-              <p class="second-list-text">Web Site</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link"
-              ><img
-                src="./images/images-9.jpg"
-                alt="latte art"
-                width="360"
-                height="300"
-              />
-              <h2 class="second-list-title">Fresh Coffee</h2>
-              <p class="second-list-text">Web Site</p></a
-            >
-          </li>
-        </ul>
+        <div class="container">
+          <h1 hidden>Navigation and menu</h1>
+          <ul class="project-list list">
+            <li><button type="button" class="list-btn">All</button></li>
+            <li><button type="button" class="list-btn">Web Site</button></li>
+            <li><button type="button" class="list-btn">App</button></li>
+            <li><button type="button" class="list-btn">Design</button></li>
+            <li><button type="button" class="list-btn">Marketing</button></li>
+          </ul>
+          <ul class="project-second-list list">
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/images-1.jpg"
+                  alt="Interfaces"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="second-list-title">Banking App Interface Concept</h2>
+                <p class="second-list-text">App</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/images-2.jpg"
+                  alt="mobile pay"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="second-list-title">Cashless Payment</h2>
+                <p class="second-list-text">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/images-3.jpg"
+                  alt="gadjets"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="second-list-title">Meditation App</h2>
+                <p class="second-list-text">App</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/images-4.jpg"
+                  alt="car"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="second-list-title">Taxi Service</h2>
+                <p class="second-list-text">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/images-5.jpg"
+                  alt="phone screen"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="second-list-title">Screen Illustrations</h2>
+                <p class="second-list-text">Design</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/images-6.jpg"
+                  alt="girl with phone"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="second-list-title">Online Courses</h2>
+                <p class="second-list-text">Marketing</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/images-7.jpg"
+                  alt="instastories"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="second-list-title">Instagram Stories Concept</h2>
+                <p class="second-list-text">Design</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/images-8.jpg"
+                  alt="food in the package"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="second-list-title">Organic Food</h2>
+                <p class="second-list-text">Web Site</p></a
+              >
+            </li>
+            <li>
+              <a href="" class="link"
+                ><img
+                  src="./images/images-9.jpg"
+                  alt="latte art"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="second-list-title">Fresh Coffee</h2>
+                <p class="second-list-text">Web Site</p></a
+              >
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./portfolio.html" class="header-logo link"
-        >Web<span class="logo-footer-word">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="second-container">
+        <a href="./portfolio.html" class="header-logo link"
+          >Web<span class="logo-footer-word">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
