--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="second-container">
+      <div class="container">
         <nav class="header-navigation">
           <a href="./index.html" class="header-logo link"
             >Web <span class="logo-word">Studio</span>
@@ -57,7 +57,7 @@
     <main>
       <!-- Hero -->
       <section class="hero">
-        <div class="second-container">
+        <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn">Order Service</button>
         </div>
@@ -132,7 +132,7 @@
       </section>
       <!-- section4 -->
       <section class="team">
-        <div class="second-container">
+        <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-list-item">
@@ -180,7 +180,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="second-container">
+      <div class="container">
         <a href="./index.html" class="header-logo link"
           >Web<span class="logo-footer-word">Studio</span></a
         >
