--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="item-title">Mark Guerrero</h3>
-              <p class="item-text">Product Designer</p>
+              <div class="text-container">
+                <h3 class="item-title">Mark Guerrero</h3>
+                <p class="item-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -152,8 +154,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="item-title">Tom Ford</h3>
-              <p class="item-text">Frontend Developer</p>
+              <div class="text-container">
+                <h3 class="item-title">Tom Ford</h3>
+                <p class="item-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -162,8 +166,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="item-title">Camila Garcia</h3>
-              <p class="item-text">Marketing</p>
+              <div class="text-container">
+                <h3 class="item-title">Camila Garcia</h3>
+                <p class="item-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -172,8 +178,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="item-title">Daniel Wilson</h3>
-              <p class="item-text">UI Designer</p>
+              <div class="text-container">
+                <h3 class="item-title">Daniel Wilson</h3>
+                <p class="item-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
