--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="header-logo link"
+        <a href="./index.html" class="header-logo footer-logo link"
           >Web<span class="logo-footer-word">Studio</span></a
         >
         <p class="footer-text">
