--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="second-container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a href="./portfolio.html" class="header-logo link"
             >Web<span class="logo-word">Studio</span></a
@@ -66,7 +66,7 @@
             <li><button type="button" class="list-btn">Marketing</button></li>
           </ul>
           <ul class="project-second-list list">
-            <li>
+            <li class="c">
               <a href="" class="link"
                 ><img
                   src="./images/images-1.jpg"
@@ -179,7 +179,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="second-container">
+      <div class="container">
         <a href="./portfolio.html" class="header-logo link"
           >Web<span class="logo-footer-word">Studio</span></a
         >
