--- a/portfolio.html
+++ b/portfolio.html
@@ -74,8 +74,12 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="second-list-title">Banking App Interface Concept</h2>
-                <p class="second-list-text">App</p></a
+                <div class="application">
+                  <h2 class="second-list-title">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="second-list-text">App</p>
+                </div></a
               >
             </li>
             <li>
@@ -86,8 +90,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="second-list-title">Cashless Payment</h2>
-                <p class="second-list-text">Marketing</p></a
+                <div class="application">
+                  <h2 class="second-list-title">Cashless Payment</h2>
+                  <p class="second-list-text">Marketing</p>
+                </div></a
               >
             </li>
             <li>
@@ -98,8 +104,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="second-list-title">Meditation App</h2>
-                <p class="second-list-text">App</p></a
+                <div class="application">
+                  <h2 class="second-list-title">Meditation App</h2>
+                  <p class="second-list-text">App</p>
+                </div></a
               >
             </li>
             <li>
@@ -110,8 +118,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="second-list-title">Taxi Service</h2>
-                <p class="second-list-text">Marketing</p></a
+                <div class="application">
+                  <h2 class="second-list-title">Taxi Service</h2>
+                  <p class="second-list-text">Marketing</p>
+                </div></a
               >
             </li>
             <li>
@@ -122,8 +132,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="second-list-title">Screen Illustrations</h2>
-                <p class="second-list-text">Design</p></a
+                <div class="application">
+                  <h2 class="second-list-title">Screen Illustrations</h2>
+                  <p class="second-list-text">Design</p>
+                </div></a
               >
             </li>
             <li>
@@ -134,8 +146,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="second-list-title">Online Courses</h2>
-                <p class="second-list-text">Marketing</p></a
+                <div class="application">
+                  <h2 class="second-list-title">Online Courses</h2>
+                  <p class="second-list-text">Marketing</p>
+                </div></a
               >
             </li>
             <li>
@@ -146,8 +160,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="second-list-title">Instagram Stories Concept</h2>
-                <p class="second-list-text">Design</p></a
+                <div class="application">
+                  <h2 class="second-list-title">Instagram Stories Concept</h2>
+                  <p class="second-list-text">Design</p>
+                </div></a
               >
             </li>
             <li>
@@ -158,8 +174,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="second-list-title">Organic Food</h2>
-                <p class="second-list-text">Web Site</p></a
+                <div class="application">
+                  <h2 class="second-list-title">Organic Food</h2>
+                  <p class="second-list-text">Web Site</p>
+                </div></a
               >
             </li>
             <li>
@@ -170,8 +188,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="second-list-title">Fresh Coffee</h2>
-                <p class="second-list-text">Web Site</p></a
+                <div class="application">
+                  <h2 class="second-list-title">Fresh Coffee</h2>
+                  <p class="second-list-text">Web Site</p>
+                </div></a
               >
             </li>
           </ul>
