--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
             <li><button type="button" class="list-btn">Marketing</button></li>
           </ul>
           <ul class="project-second-list list">
-            <li class="c">
+            <li class="project-second-item">
               <a href="" class="link"
                 ><img
                   src="./images/images-1.jpg"
@@ -82,7 +82,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="project-second-item">
               <a href="" class="link"
                 ><img
                   src="./images/images-2.jpg"
@@ -96,7 +96,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="project-second-item">
               <a href="" class="link"
                 ><img
                   src="./images/images-3.jpg"
@@ -110,7 +110,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="project-second-item">
               <a href="" class="link"
                 ><img
                   src="./images/images-4.jpg"
@@ -124,7 +124,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="project-second-item">
               <a href="" class="link"
                 ><img
                   src="./images/images-5.jpg"
@@ -138,7 +138,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="project-second-item">
               <a href="" class="link"
                 ><img
                   src="./images/images-6.jpg"
@@ -152,7 +152,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="project-second-item">
               <a href="" class="link"
                 ><img
                   src="./images/images-7.jpg"
@@ -166,7 +166,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="project-second-item">
               <a href="" class="link"
                 ><img
                   src="./images/images-8.jpg"
@@ -180,7 +180,7 @@
                 </div></a
               >
             </li>
-            <li>
+            <li class="project-second-item">
               <a href="" class="link"
                 ><img
                   src="./images/images-9.jpg"
