--- a/index.html
+++ b/index.html
@@ -68,29 +68,29 @@
           <h2 class="hidden-title" hidden>What are we doing</h2>
           <ul class="skills-list list">
             <li class="skills-list-item">
-              <h3 class="item-title">Strategy</h3>
-              <p class="item-text">
+              <h3 style="text-align: left" class="item-title">Strategy</h3>
+              <p style="text-align: left" class="item-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="skills-list-item">
-              <h3 class="item-title">Punctuality</h3>
-              <p class="item-text">
+              <h3 style="text-align: left" class="item-title">Punctuality</h3>
+              <p style="text-align: left" class="item-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="skills-list-item">
-              <h3 class="item-title">Diligence</h3>
-              <p class="item-text">
+              <h3 style="text-align: left" class="item-title">Diligence</h3>
+              <p style="text-align: left" class="item-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="skills-list-item">
-              <h3 class="item-title">Technologies</h3>
-              <p class="item-text">
+              <h3 style="text-align: left" class="item-title">Technologies</h3>
+              <p style="text-align: left" class="item-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
