remarks finish two

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- section2 -->
       <section class="skills">
         <div class="container">
-          <h2 class="hidden-title" hidden>What are we doing</h2>
+          <h2 class="visually-hidden">What are we doing</h2>
           <ul class="skills-list list">
             <li class="skills-list-item">
               <h3 style="text-align: left" class="item-title">Strategy</h3>
